	  The list is now using the standard list font setting from mui "Listviews".
	  The TileMarker is now considered in the calculation of the titlecolumnwidth and
	  the rendering of the titletext.
	  Added the display of the secondary sort (MUIA_MailTreelist_TitleMarker2).
	  Added support for the MUIA_MailTreelist_FolderType to display the correct address
	  and title in the FROMTO column.

2007-01-27  Bernd Gollesch <bgollesch@sime.at>
	* smakefile: Added "amiga-mui/mailtreelistclass-new.c" to the generated makefile
	  for SAS/C (yes, I'm still using it).

2006-12-24  Release Version 0.30

2006-03-04  Bernd Gollesch <bgollesch@sime.at>
	* text2html.c: Small bug fix if '@' is the first char of the buffer.

2006-02-09  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/configwnd.c: Removed wrong cast.
	* amiga-mui/gui_main.c: app_show() should not jump back to the incoming folder.
	* mail.c: Replace special chars with html-code in the header fields.
	* text2html.c: Ampersand replacement was missing.

2006-02-05  Release Version 0.29

2006-01-25  Bernd Gollesch <bgollesch@sime.at>
	* configuration.c: Corrected wrong check for the spam black list (fixes bug #1414643)

2006-01-22  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/filterruleclass.c: Changed "contains" into "matches" because we have
	  patternmatching now.
	* amiga-mui/filterwnd.c: Adjusted to pattern matching code.
	* indep-include/support.h, amiga-mui/support.c: Tow new function for pattern matching
	  and some FLAGS for the functions.
	* filter.(c|h): Added pattern matching (fixes bug #783885). For now all pattern
	  are surrounded with #? to keep the filters working (wee need a new option for
	  every rule). Only exception is the Header-Field-Name.
	  Rules are now freed when filter gets disposed.
	  filter_remove_rule() doese now really free all allocations of the rule.
	  Corrected functionname typo.
	* folder.c: Adjusted to pattern matching code.